<resources>
    <string name="app_name">Awfrlak</string>
    <string name="app_license">Copyright@Raantech Company</string>

    <!-- SelectLanguageFragment-->
    <string name="welcome">Welcome</string>
    <string name="please_choose_your_preference_language">Please choose your preferred language!</string>
    <string name="english">English</string>
    <string name="arabic">العربية</string>
    <string name="start">Start</string>

    <!-- error view -->
    <string name="btn_try_again">try Again</string>
    <string name="error_no_internet">No Internet connection</string>
    <string name="error_server">timeout</string>
    <string name="error_msg">Something went wrong</string>
    <string name="session_ended">Session Ended</string>
    <string name="screen_shot_denied">Grant stoarge permission to take screenshot!</string>
    <string name="camera_permission_denied">Grant camera permission to take the 3 seconds video</string>
    <string name="screen_shot">take screenshot</string>

    <string name="alert_dialog_title">Fly US VIP</string>
    <string name="alert_dialog_all_info_in_english">All information entered must be in English</string>
    <string name="not_available_yet">This feature is coming soon to Al Alami app!</string>
    <!-- General -->
    <string name="sar">SAR</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="loading">Loading …</string>
    <string name="under_development">Under Development</string>
    <string name="ok">OK</string>
    <string name="none">None</string>
    <string name="edit">Edit</string>
    <string name="updated_successfully">Updated Successfully</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="empty_string" />
    <string name="km">km</string>
    <string name="you_re_not_logged_in">You\'re Not Logged In.</string>
    <string name="you_need_to_login_into_your_account_to_see_this_screen">You need to login into your account\nto see this screen</string>

    <!-- Image Picker Strings -->
    <string name="go_to_settings">Go To Settings</string>
    <string name="no_activity_data_chart_err">No Data Yet !</string>
    <string name="choose_image_folders_mode_title">select Image</string>
    <string name="choose_image_done_button_txt">Done</string>
    <string name="choose_image_max_select_message">You have reached selection limit!</string>
    <string name="general_err_msg">"SomeThing Happened Please Try Again "</string>

    <!--  Validator strings  -->
    <string name="must_not_be_empty">must not be empty</string>
    <string name="must_not_be_at_least">must not be at least </string>
    <string name="characters"> characters</string>
    <string name="numbers"> numbers</string>
    <string name="text">Text</string>
    <string name="date">Date</string>
    <string name="email_not_valid_err">Enter a valid email address (example: aaa@bbb.ccc)</string>
    <string name="phone_not_valid_err">Enter a valid phone number (example: 07xxxxxxx)</string>
    <string name="password_not_valid_err">Enter a valid password (example: P@ssw0rd)</string>
    <string name="please_select_your_gender">Please select your gender</string>
    <string name="password_not_match">Password not match</string>
    <string name="text_not_valid_err">Enter a valid Text</string>
    <string name="date_not_valid_err">Enter a valid date</string>
    <string name="time_not_valid_err">Enter a valid time</string>
    <string name="digits">digits</string>
    <string name="travllers">Travellers</string>
    <string name="next">NEXT</string>
    <string name="select_time">Select time</string>
    <string name="adult">Adult</string>
    <string name="submit">Submit</string>
    <string name="data_missing">Data missing</string>
    <string name="please_fill_data_fields">Please fill all the data fields</string>

    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="hint_date">Date</string>
    <string name="time">Time</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone number</string>
    <string name="otp">OTP</string>
    <string name="number">Number</string>

    <!--    Update App-->
    <string name="new_update">NEW UPDATE!</string>
    <string name="there_s_a_new_update_available_for_fly_us_vip">There’s a new update available for\nFLY US VIP</string>
    <string name="update_now">UPDATE NOW</string>
    <string name="remind_me_later">REMIND ME LATER</string>
    <string name="close_app">CLOSE APP</string>
    <string name="important_update">IMPORTANT UPDATE!</string>

    <!--    Completed dialog-->
    <string name="completed_successfully">Completed Successfully</string>


    <!--    Language    -->
    <string name="continue_">Continue</string>
    <string name="please_choose_your_preferred_language">Please choose your preferred language!</string>

    <!--    OnBoarding  -->
    <string name="title_on_boarding_1">title_on_boarding_1</string>
    <string name="description_on_boarding_1">description_on_boarding_1</string>
    <string name="title_on_boarding_2">title_on_boarding_2</string>
    <string name="description_on_boarding_2">description_on_boarding_2</string>
    <string name="title_on_boarding_3">title_on_boarding_3</string>
    <string name="description_on_boarding_3">description_on_boarding_3</string>
    <string name="title_on_boarding_4">title_on_boarding_4</string>
    <string name="description_on_boarding_4">description_on_boarding_4</string>

    <!--    Media   -->
    <string name="add_Media">Add Media</string>
    <string name="media">Media</string>
    <string name="no_data_found">No Data Found</string>
    <string name="no_available_data">-- No Available Data --</string>
    <string name="nav_home">Home</string>
    <string name="nav_services">Services</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--    Cart    -->
    <string name="done">Done</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="you_have_x_of_product_in_your_cart">You have %s of product in your cart</string>
    <string name="subtotal">Subtotal</string>
    <string name="value_added_tax_15">Value-added tax (15%)</string>
    <string name="total">Total</string>
    <string name="pay">Pay</string>
    <string name="cart">Cart</string>
    <string name="successful_purchase_will_be_delivered_to_you_within_3_days">Successful purchase, will be delivered to you within 3 days</string>
    <string name="purchas_completed">Purchase Completed</string>

    <!--    Login-->
    <string name="login">Login</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="logout">Logout</string>
    <!--    Verification Login   -->
    <string name="verification">Verification</string>
    <string name="please_check_you_message_for_a_four_digit_security_code_and_enter_it_below">Please check you message for a four-digit security code and enter it below.</string>
    <string name="i_didn_t_receive_the_code">I didn’t receive the code</string>
    <string name="confirm">Confirm</string>
    <string name="resend_code">RESEND CODE</string>
    <string name="verify">Verify</string>
    <!--    App Settings -->
    <string name="use_high_priority_notifications">Use high priority notifications</string>
    <string name="show_previews_of_notifications_at_the_top_of_the_screen">Show previews of notifications at the top\nof the screen</string>
    <string name="language">Language</string>
    <string name="settings">Settings</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_my_purchases">My Purchases</string>
    <string name="menu_favorites">Favorite</string>
    <string name="menu_account">Account</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about_us">About Us</string>
    <!--    About Us    -->
    <string name="contact_us">Contact us</string>
    <string name="search_what_to_ask_here">Search here</string>

    <!--    Home-->
    <string name="all_categories">All Categories</string>
    <string name="phones">Phones</string>
    <string name="accessories">Accessories</string>
    <string name="used">Used</string>
    <string name="stores">Stores</string>
    <string name="mobiles">Mobiles</string>
    <string name="services">Services</string>
    <string name="send_question">Send Question</string>
    <string name="order_service">Order service</string>
    <string name="service">Service</string>
    <string name="repair_time">Repair time</string>
    <string name="product_information">Product Information</string>
    <string name="mobile_type">Type</string>
    <string name="mobile_storage">Storage</string>
    <string name="mobile_color">Color</string>
    <string name="mobile_sim_number">Sim number</string>
    <string name="accessory_dedicated">Dedicated</string>
    <string name="username">Username</string>
    <string name="address">Address</string>
    <string name="register">Register</string>
    <string name="buy_now">Buy Now</string>
    <string name="delivery">Delivery</string>

    <!--    Map    -->
    <string name="search_here">Search here</string>
    <string name="location">Location</string>
    <string name="please_pick_location">Please pick location</string>

    <!--    Create Address   -->
    <string name="save_address">Save Address</string>
    <string name="update_address">Update Address</string>
    <string name="contact_name">Name</string>
    <string name="city">City</string>
    <string name="district">District</string>
    <string name="street">Street</string>
    <string name="building_number">Building Number</string>
    <string name="description">Description</string>

    <!--    City Picker-->
    <string name="select_a_city">Select a City</string>
    <string name="where_should_we_place_your_ads">Where should we place your ads?</string>
    <string name="please_select_city">Please select city</string>

    <!--    Search -->
    <string name="no_results">No search result found</string>
    <string name="no_results_description">Your search did not match any products. please try a different keyword</string>
    <string name="sorry_we_couldnt_find_matches_for">Sorry we couldn\'t find matches for “%s”</string>
    <string name="search">Search</string>
    <string name="search_hint">Search ...</string>

    <!-- notifications -->
    <string name="title_notifications">Notifications</string>
    <string name="label_notifications_empty">No Notifications!</string>
    <string name="notification_title_key">englishTitle</string>
    <string name="notification_message_key">englishBody</string>
    <string name="notification_type_key">notificationType</string>
    <string name="notification_value_key">Data</string>


</resources>