<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.raantech.awfrlak.user.ui.more.settings.SettingsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar_layout"
            layout="@layout/layout_toolbar" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:paddingStart="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="@dimen/_5sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/relativeCash"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:layout_toStartOf="@id/switchNotifications"
                        android:orientation="vertical">

                        <com.raantech.awfrlak.user.ui.base.views.AppTextView
                            style="@style/textview_normal_regular"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/use_high_priority_notifications"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_13ssp" />

                        <com.raantech.awfrlak.user.ui.base.views.AppTextView
                            style="@style/textview_normal_regular"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:text="@string/show_previews_of_notifications_at_the_top_of_the_screen"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_9ssp" />
                    </LinearLayout>

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switchNotifications"
                        style="@style/Widget.App.Switch"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_22sdp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:background="?selectableItemBackgroundBorderless"
                        android:checked="@{viewModel.isNotificationsIsEnabled}"
                        tools:checked="false" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:background="@color/divider_gray"
                    android:visibility="gone" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:visibility="gone">

                    <LinearLayout
                        android:id="@+id/linearLanguage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_toStartOf="@id/imgArrow"
                        android:orientation="vertical">

                        <com.raantech.awfrlak.user.ui.base.views.AppTextView
                            style="@style/textview_normal_regular"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerInParent="true"
                            android:text="@string/language"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_13ssp" />

                        <com.raantech.awfrlak.user.ui.base.views.AppTextView
                            style="@style/normalRegularFontStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:text="@{viewModel.appLanguage}"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_9ssp" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/imgArrow"
                        android:layout_width="@dimen/_10sdp"
                        android:layout_height="@dimen/_10sdp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:src="@drawable/ic_more_arrow_right" />
                </RelativeLayout>


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
</layout>